<resources>
    <string name="app_name">LeosBook</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">SignIn</string>
    <string name="no_account_yet">Don\'t have an account?</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mobile">Mobile</string>
    <string name="register">SignUp</string>
    <string name="browse_the_largest_catalog">Browse through a catalog of books on our platform.</string>
    <string name="find_books_easily">Find Books Easily</string>
    <string name="find_books">Find Books Easily</string>
    <string name="seamless_payment">Seamless Payment</string>
    <string name="view_transactions"><![CDATA[View Transactions & Orders]]></string>
    <string name="refunds">Refunds</string>
    <string name="find_book_body">Browse through a catalog of books on our platform.</string>
    <string name="seamless_payment_body">Pay for your favourite books with different payment methods.</string>
    <string name="view_transactions_body">View transactions and orders from customers easily.</string>
    <string name="refund_customers_body">Refund your customers easily without stress.</string>
    <string name="next_slide">Next</string>
    <string name="start_screen">Start</string>
    <string name="title_api_error">Something Went Wrong</string>
    <string name="title_api_success">Congratulations</string>
    <string name="shopping_cart">Cart</string>
    <string name="fav_books">Favourite</string>
    <string name="description_page_title">Description</string>
    <string name="product_page_title">Product Details</string>
    <string name="reviews_page_title">Reviews</string>
    <string name="none_available">N/A</string>
    <string name="pay_now">PAY \u20a6%s</string>
    <string name="price">\u20a6%s</string>
    <string name="semi_bold">source_sans_pro_semi_bold</string>
    <string name="number_picker_formatter">%2d</string>
    <string name="processing">Processing…</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="dial_to_complete_your_transaction">Use the code above to complete your transaction</string>
    <string name="u20a68_500">₦8,500</string>
    <string name="update_profile">Update Profile</string>
    <string name="create_update_profile">ProfileUpdate</string>
    <string name="n_a">N/A</string>
    <string name="general">general</string>
    <string name="pay_into_the_account_number_above">Pay into the account number above</string>

</resources>